--- a/tyche_web/css/product.css
+++ b/tyche_web/css/product.css
@@ -86,6 +86,10 @@
   
 }
 
+.carousel-indicators [data-bs-target]{
+  background-color: rgb(51, 51, 51);
+}
+
 .container-item{
   width: 30%;
   margin: auto;
