--- a/tyche_web/css/product.css
+++ b/tyche_web/css/product.css
@@ -1,5 +1,7 @@
 /* background-color: #9de1c2; */
-
+*{
+  font-family: apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;;
+}
 
 
 .container {
@@ -27,6 +29,13 @@
 /*
  * Dummy devices (replace them with your own or something else entirely!)
  */
+
+ .ecran{
+   height: 100vh;
+   display:flex;
+   justify-content: center;
+   align-items: center;
+ }
 
 .product-device {
   position: absolute;
@@ -67,6 +76,10 @@
   background-color: rgb(160, 160, 160);
 }
 
+#titreAcceuil{
+  font-size: 3rem;
+}
+
 .jaune{
   background-color: #fbd97f;
   border: 0; 
@@ -76,6 +89,7 @@
 /*
  * Carousel
  */
+
 
 .carousel-item{
   height: 32rem;
@@ -91,7 +105,7 @@
 }
 
 .container-item{
-  width: 30%;
+  width: 40%;
   margin: auto;
   margin-top: 8rem;
 }
@@ -115,7 +129,32 @@
   border-radius: 20px;
 }
 
+/*
+ * Graph
+ */
 
+.container-graph{
+  width: 75%;
+}
+
+#message {
+  width: 70%;
+  background-color: white;
+  border: solid 2px #fbd97f;
+  border-radius: 10px;
+  margin: 0 auto 2rem;
+  padding: 1.2rem;
+  text-align: center;
+}
+
+@media (max-width: 768px) {
+  .container-graph{
+    width: 100%;
+  }
+  #message{
+    width: 100%;
+  }
+}
 /*
  * Extra utilities
  */
