Modif titre animer

--- a/tyche_web/scss/style.css
+++ b/tyche_web/scss/style.css
@@ -1,6 +1,5 @@
 *, *:before, *:after {
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  box-sizing: border-box;
   margin: 0;
   padding: 0;
 }
@@ -29,12 +28,10 @@ body {
   background-color: transparent #fbd97f;
   outline: none;
   border: none;
-  -webkit-transition: color 0.5s;
   transition: color 0.5s;
   cursor: pointer;
   border-radius: 30px;
 }
-
 .blob-btn:before {
   content: "";
   z-index: 1;
@@ -46,7 +43,6 @@ body {
   border: #fbd97f;
   border-radius: 30px;
 }
-
 .blob-btn:after {
   content: "";
   z-index: -2;
@@ -55,24 +51,19 @@ body {
   top: 3px;
   width: 100%;
   height: 100%;
-  -webkit-transition: all 0.3s 0.2s;
   transition: all 0.3s 0.2s;
   border-radius: 30px;
 }
-
 .blob-btn:hover {
   color: black;
   border-radius: 30px;
 }
-
 .blob-btn:hover:after {
-  -webkit-transition: all 0.3s;
   transition: all 0.3s;
   left: 0;
   top: 0;
   border-radius: 30px;
 }
-
 .blob-btn__inner {
   z-index: -1;
   overflow: hidden;
@@ -84,15 +75,12 @@ body {
   border-radius: 30px;
   background: #fbd97f;
 }
-
 .blob-btn__blobs {
   position: relative;
   display: block;
   height: 100%;
-  -webkit-filter: url("#goo");
-          filter: url("#goo");
+  filter: url("#goo");
 }
-
 .blob-btn__blob {
   position: absolute;
   top: 2px;
@@ -100,95 +88,66 @@ body {
   height: 100%;
   background: #9de1c2;
   border-radius: 100%;
-  -webkit-transform: translate3d(0, 150%, 0) scale(1.7);
-          transform: translate3d(0, 150%, 0) scale(1.7);
-  -webkit-transition: -webkit-transform 0.45s;
-  transition: -webkit-transform 0.45s;
+  transform: translate3d(0, 150%, 0) scale(1.7);
   transition: transform 0.45s;
-  transition: transform 0.45s, -webkit-transform 0.45s;
 }
-
-@supports ((-webkit-filter: url("#goo")) or (filter: url("#goo"))) {
+@supports (filter: url("#goo")) {
   .blob-btn__blob {
-    -webkit-transform: translate3d(0, 150%, 0) scale(1.4);
-            transform: translate3d(0, 150%, 0) scale(1.4);
+    transform: translate3d(0, 150%, 0) scale(1.4);
   }
 }
-
 .blob-btn__blob:nth-child(1) {
   left: 0%;
-  -webkit-transition-delay: 0s;
-          transition-delay: 0s;
+  transition-delay: 0s;
 }
-
 .blob-btn__blob:nth-child(2) {
   left: 30%;
-  -webkit-transition-delay: 0.08s;
-          transition-delay: 0.08s;
+  transition-delay: 0.08s;
 }
-
 .blob-btn__blob:nth-child(3) {
   left: 60%;
-  -webkit-transition-delay: 0.16s;
-          transition-delay: 0.16s;
+  transition-delay: 0.16s;
 }
-
 .blob-btn__blob:nth-child(4) {
   left: 90%;
-  -webkit-transition-delay: 0.24s;
-          transition-delay: 0.24s;
+  transition-delay: 0.24s;
 }
-
 .blob-btn:hover .blob-btn__blob {
-  -webkit-transform: translateZ(0) scale(1.7);
-          transform: translateZ(0) scale(1.7);
+  transform: translateZ(0) scale(1.7);
 }
-
-@supports ((-webkit-filter: url("#goo")) or (filter: url("#goo"))) {
+@supports (filter: url("#goo")) {
   .blob-btn:hover .blob-btn__blob {
-    -webkit-transform: translateZ(0) scale(1.4);
-            transform: translateZ(0) scale(1.4);
+    transform: translateZ(0) scale(1.4);
   }
 }
 
 .content {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  -webkit-transform: translate(-50%, -50%);
-          transform: translate(-50%, -50%);
-  height: 160px;
   overflow: hidden;
-  font-family: apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   font-size: 35px;
-  line-height: 40px;
-  color: #000000;
+  line-height: 50px;
+  color: #00213C;
 }
-
 .content__container {
-  font-weight: 600;
   overflow: hidden;
-  height: 40px;
+  height: 50px;
   padding: 0 40px;
 }
-
 .content__container:before {
-  content: '[';
+  content: "[";
   left: 0;
 }
-
 .content__container:after {
-  content: ']';
+  content: "]";
   position: absolute;
   right: 0;
 }
-
 .content__container:after, .content__container:before {
   position: absolute;
   top: 0;
-  color: #16a085;
+  color: #9de1c2;
   font-size: 42px;
-  line-height: 40px;
+  line-height: 50px;
   -webkit-animation-name: opacity;
   -webkit-animation-duration: 2s;
   -webkit-animation-iteration-count: infinite;
@@ -196,16 +155,14 @@ body {
   animation-duration: 2s;
   animation-iteration-count: infinite;
 }
-
 .content__container__text {
   display: inline;
   float: left;
   margin: 0;
 }
-
 .content__container__list {
   margin-top: 0;
-  padding-left: 110px;
+  padding-left: 80px;
   text-align: left;
   list-style: none;
   -webkit-animation-name: change;
@@ -215,9 +172,8 @@ body {
   animation-duration: 10s;
   animation-iteration-count: infinite;
 }
-
 .content__container__list__item {
-  line-height: 40px;
+  line-height: 50px;
   margin: 0;
 }
 
@@ -229,34 +185,82 @@ body {
     opacity: 1;
   }
 }
-
 @-webkit-keyframes change {
   0%, 12.66%, 100% {
-    -webkit-transform: translate3d(0, 0, 0);
-            transform: translate3d(0, 0, 0);
+    transform: translate3d(0, 0, 0);
   }
   16.66%, 29.32% {
-    -webkit-transform: translate3d(0, -25%, 0);
-            transform: translate3d(0, -25%, 0);
+    transform: translate3d(0, -25%, 0);
   }
   33.32%, 45.98% {
-    -webkit-transform: translate3d(0, -50%, 0);
-            transform: translate3d(0, -50%, 0);
+    transform: translate3d(0, -50%, 0);
   }
   49.98%, 62.64% {
-    -webkit-transform: translate3d(0, -75%, 0);
-            transform: translate3d(0, -75%, 0);
+    transform: translate3d(0, -75%, 0);
   }
   66.64%, 79.3% {
-    -webkit-transform: translate3d(0, -50%, 0);
-            transform: translate3d(0, -50%, 0);
+    transform: translate3d(0, -50%, 0);
   }
   83.3%, 95.96% {
-    -webkit-transform: translate3d(0, -25%, 0);
-            transform: translate3d(0, -25%, 0);
+    transform: translate3d(0, -25%, 0);
   }
 }
-
+@-o-keyframes opacity {
+  0%, 100% {
+    opacity: 0;
+  }
+  50% {
+    opacity: 1;
+  }
+}
+@-o-keyframes change {
+  0%, 12.66%, 100% {
+    transform: translate3d(0, 0, 0);
+  }
+  16.66%, 29.32% {
+    transform: translate3d(0, -25%, 0);
+  }
+  33.32%, 45.98% {
+    transform: translate3d(0, -50%, 0);
+  }
+  49.98%, 62.64% {
+    transform: translate3d(0, -75%, 0);
+  }
+  66.64%, 79.3% {
+    transform: translate3d(0, -50%, 0);
+  }
+  83.3%, 95.96% {
+    transform: translate3d(0, -25%, 0);
+  }
+}
+@-moz-keyframes opacity {
+  0%, 100% {
+    opacity: 0;
+  }
+  50% {
+    opacity: 1;
+  }
+}
+@-moz-keyframes change {
+  0%, 12.66%, 100% {
+    transform: translate3d(0, 0, 0);
+  }
+  16.66%, 29.32% {
+    transform: translate3d(0, -25%, 0);
+  }
+  33.32%, 45.98% {
+    transform: translate3d(0, -50%, 0);
+  }
+  49.98%, 62.64% {
+    transform: translate3d(0, -75%, 0);
+  }
+  66.64%, 79.3% {
+    transform: translate3d(0, -50%, 0);
+  }
+  83.3%, 95.96% {
+    transform: translate3d(0, -25%, 0);
+  }
+}
 @keyframes opacity {
   0%, 100% {
     opacity: 0;
@@ -265,31 +269,25 @@ body {
     opacity: 1;
   }
 }
-
 @keyframes change {
   0%, 12.66%, 100% {
-    -webkit-transform: translate3d(0, 0, 0);
-            transform: translate3d(0, 0, 0);
+    transform: translate3d(0, 0, 0);
   }
   16.66%, 29.32% {
-    -webkit-transform: translate3d(0, -25%, 0);
-            transform: translate3d(0, -25%, 0);
+    transform: translate3d(0, -25%, 0);
   }
   33.32%, 45.98% {
-    -webkit-transform: translate3d(0, -50%, 0);
-            transform: translate3d(0, -50%, 0);
+    transform: translate3d(0, -50%, 0);
   }
   49.98%, 62.64% {
-    -webkit-transform: translate3d(0, -75%, 0);
-            transform: translate3d(0, -75%, 0);
+    transform: translate3d(0, -75%, 0);
   }
   66.64%, 79.3% {
-    -webkit-transform: translate3d(0, -50%, 0);
-            transform: translate3d(0, -50%, 0);
+    transform: translate3d(0, -50%, 0);
   }
   83.3%, 95.96% {
-    -webkit-transform: translate3d(0, -25%, 0);
-            transform: translate3d(0, -25%, 0);
+    transform: translate3d(0, -25%, 0);
   }
 }
+
 /*# sourceMappingURL=style.css.map */
