--- a/tyche_web/css/presentation.css
+++ b/tyche_web/css/presentation.css
@@ -27,18 +27,18 @@ header h2 {
 }
 
 .scroll-container:nth-of-type(1) {
-  background-color:#c6dfd4;
+  background-color:#9de1c2;
 
 }
 .scroll-container:nth-of-type(2) {
-  background-color: #c6dfd4;
+  background-color: #9de1c2;
 
 }
 .scroll-container:nth-of-type(3) {
-  background-color: #c6dfd4;
+  background-color: #9de1c2;
 }
 .scroll-container:nth-of-type(4) {
-  background-color: #c6dfd4;
+  background-color: #9de1c2;
 }
 
 .scroll-container:nth-of-type(even) {
