--- a/tyche_web/scss/style.scss
+++ b/tyche_web/scss/style.scss
@@ -129,22 +129,23 @@ $borderW: 2px;
 // Titre page acceuil
 
 .content {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  height: 160px;
+  // position: absolute;
+  // top: 50%;
+  // left: 50%;
+  // transform: translate(-50%, -50%);
+  // height: 160px;
   overflow:hidden;
   
   font-family: apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   font-size: 35px;
-  line-height: 40px;
-  color: #000000;
+  // line-height à modifier si le texte dépasse du hidden overflow doit être le même que celui de &:after, &:before 
+  line-height: 50px;
+  color: #00213C;
   
   &__container {
-    font-weight: 600;
+    // font-weight: 600;
     overflow: hidden;
-    height: 40px;
+    height: 50px;
     padding: 0 40px;
 
     &:before {
@@ -162,9 +163,10 @@ $borderW: 2px;
       position: absolute;
       top: 0;
       
-      color: #16a085;
+      color: #9de1c2;
       font-size: 42px;
-      line-height: 40px;
+      // line-height à modifier si le texte dépasse du hidden overflow doit être le même que celui de .content 
+      line-height: 50px;
       
       -webkit-animation-name: opacity;
       -webkit-animation-duration: 2s;
@@ -182,7 +184,7 @@ $borderW: 2px;
 
     &__list {
       margin-top: 0;
-      padding-left: 110px;
+      padding-left: 80px;
       text-align: left;
       list-style: none;
       
@@ -194,7 +196,7 @@ $borderW: 2px;
       animation-iteration-count: infinite;
 
       &__item {
-        line-height:40px;
+        line-height:50px;
         margin:0;
       }
     }
