--- a/tyche_web/css/product.css
+++ b/tyche_web/css/product.css
@@ -17,15 +17,32 @@
   -webkit-backdrop-filter: saturate(180%) blur(20px);
   backdrop-filter: saturate(180%) blur(20px);
 }
-.site-header a {
-  color: #000000;
+.navigation{
+  color: #00213C;
   transition: color .15s ease-in-out;
 }
-.site-header a:hover {
+.navigation:hover{
   color: #fff;
   text-decoration: none;
 }
 
+.btn-white{
+  border: #00213C 1px solid;
+  color: #00213C;
+  transition: color .15s ease-in-out;
+}
+
+.btn-white:hover {
+  color: #fff;
+  background-color: #00213C;
+}
+
+svg .bi:hover {
+  color: white;
+}
+svg .bi {
+  color:#00213C;
+}
 /*
  * Dummy devices (replace them with your own or something else entirely!)
  */
@@ -78,6 +95,11 @@
 
 #titreAcceuil{
   font-size: 3rem;
+}
+
+#text-animation{
+  margin:0 auto;
+
 }
 
 .jaune{
