--- a/tyche_web/scss/style.css
+++ b/tyche_web/scss/style.css
@@ -129,6 +129,8 @@ body {
   color: #00213C;
 }
 .content__container {
+  margin: 0 auto;
+  width: fit-content;
   overflow: hidden;
   height: 50px;
   padding: 0 40px;
@@ -161,7 +163,8 @@ body {
   margin: 0;
 }
 .content__container__list {
-  margin-top: 0;
+  width: fit-content;
+  margin: 0;
   padding-left: 80px;
   text-align: left;
   list-style: none;
